--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -13,6 +13,8 @@ else()
     message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}")
 endif()
 
+
+
 set(BACKWARD_SOURCE ${EXTERNAL_DIR}/backward-cpp-master)
 set(BACKWARD_ARCHIVE ${EXTERNAL_DIR}/backward.zip)
 if(NOT EXISTS ${BACKWARD_ARCHIVE})
@@ -43,8 +45,6 @@ file(GLOB BACKWARD_SOURCES ${BACKWARD_SOURCE}/*.cpp)
 set(BACKWARD_INCLUDE_DIR ${BACKWARD_SOURCE})
 list(APPEND EXTERNAL_HEADERS ${BACKWARD_HEADERS})
 list(APPEND EXTERNAL_SOURCES ${BACKWARD_SOURCES})
-
-
 
 
 
@@ -84,7 +84,6 @@ list(APPEND EXTERNAL_HEADERS ${ASIO_HEADERS})
 
 
 
-
 set(CURL_NAME_VERSION curl-7.83.0)
 set(CURL_SOURCE ${EXTERNAL_DIR}/${CURL_NAME_VERSION})
 set(CURL_ARCHIVE ${EXTERNAL_DIR}/${CURL_NAME_VERSION}.zip)
@@ -119,4 +118,4 @@ set(CURL_INCLUDE_DIR ${CURL_SOURCE}/include)
 set(CURL_LIB_FILE ${EXTERNAL_BUILD_DIR}/${CURL_NAME_VERSION}/lib/libcurl-d.a)
 list(APPEND EXTERNAL_HEADERS ${CURL_HEADERS})
 set(BUILD_SHARED_LIBS OFF)
-add_subdirectory(${CURL_SOURCE})
+# add_subdirectory(${CURL_SOURCE})
