exclude backward from build

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -43,8 +43,8 @@ endif()
 file(GLOB BACKWARD_HEADERS ${BACKWARD_SOURCE}/*.hpp)
 file(GLOB BACKWARD_SOURCES ${BACKWARD_SOURCE}/*.cpp)
 set(BACKWARD_INCLUDE_DIR ${BACKWARD_SOURCE})
-list(APPEND EXTERNAL_HEADERS ${BACKWARD_HEADERS})
-list(APPEND EXTERNAL_SOURCES ${BACKWARD_SOURCES})
+# list(APPEND EXTERNAL_HEADERS ${BACKWARD_HEADERS})
+# list(APPEND EXTERNAL_SOURCES ${BACKWARD_SOURCES})
 
 
 
